// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Default story 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#F2F2F7",
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "space-between",
        "paddingRight": 15,
        "width": "100%",
      },
    ]
  }
  variantContainer="default"
>
  <View
    actionVariant="default"
    style={
      [
        {
          "alignItems": "flex-start",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": 15,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 22,
          },
        ]
      }
    >
      <RNGestureHandlerButton
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        enabled={true}
        handlerTag={1}
        handlerType="NativeViewGestureHandler"
        onActiveStateChange={[Function]}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 16,
            "display": "flex",
            "flexDirection": "row",
            "height": 22,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "marginLeft": 5,
                "marginRight": 5,
              },
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="14"
            bbWidth="14"
            fill="none"
            focusable={false}
            height={14}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 14,
                  "width": 14,
                },
              ]
            }
            vbHeight={14}
            vbWidth={14}
            width={14}
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M7 12.7222C10.3137 12.7222 13 10.0359 13 6.72223C13 3.40852 10.3137 0.722229 7 0.722229C3.68629 0.722229 1 3.40852 1 6.72223C1 10.0359 3.68629 12.7222 7 12.7222Z"
                fill={
                  {
                    "payload": 4283979478,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <Text
          style={
            [
              {
                "color": "#081F32",
                "fontFamily": "Roboto-Medium",
                "fontSize": 17,
                "letterSpacing": -0.41,
                "lineHeight": 22,
              },
              {},
              [
                {
                  "color": "#5856D6",
                },
              ],
            ]
          }
          variant="body17-semibold"
        >
          Back
        </Text>
      </RNGestureHandlerButton>
    </View>
  </View>
  <Text
    style={
      [
        {
          "color": "#081F32",
          "fontFamily": "Roboto-Medium",
          "fontSize": 15,
          "letterSpacing": -0.24,
          "lineHeight": 20,
        },
        {},
        [
          {
            "alignItems": "center",
            "flexBasis": 0,
            "flexGrow": 2,
            "flexShrink": 1,
            "marginBottom": 0,
            "textAlign": "center",
          },
        ],
      ]
    }
    textVariant="default"
    variant="body15-semibold"
  >
    Title
  </Text>
  <View
    actionVariant="default"
    style={
      [
        {
          "alignItems": "flex-end",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#5856D6",
            "borderColor": "#34C759",
            "borderRadius": 16,
            "borderWidth": 0,
            "height": 28,
            "width": 66,
          },
        ]
      }
      variant="small"
    >
      <RNGestureHandlerButton
        activeOpacity={0.105}
        collapsable={false}
        delayLongPress={600}
        enabled={true}
        handlerTag={2}
        handlerType="NativeViewGestureHandler"
        onActiveStateChange={[Function]}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 16,
            "height": 28,
            "justifyContent": "center",
          }
        }
        underlayColor="black"
        variant="small"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "black",
              "borderBottomLeftRadius": undefined,
              "borderBottomRightRadius": undefined,
              "borderRadius": 16,
              "borderTopLeftRadius": undefined,
              "borderTopRightRadius": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          buttonVariant="small"
          style={
            [
              {
                "color": "#081F32",
                "fontFamily": "Roboto-Medium",
                "fontSize": 13,
                "letterSpacing": -0.08,
                "lineHeight": 18,
              },
              {},
              [
                {
                  "color": "#FFFFFF",
                },
              ],
            ]
          }
          variant="tagline13-tag"
        >
          Filter
        </Text>
      </RNGestureHandlerButton>
    </View>
  </View>
</View>
`;

exports[`renders Large story 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "backgroundColor": "#F2F2F7",
        "flexDirection": "row",
        "height": 96,
        "justifyContent": "space-between",
        "paddingRight": 15,
        "width": "100%",
      },
    ]
  }
  variantContainer="large"
>
  <View
    actionVariant="large"
    style={
      [
        {
          "alignItems": "flex-start",
          "flexBasis": 0,
          "flexGrow": 0,
          "flexShrink": 1,
          "marginLeft": 15,
        },
      ]
    }
  />
  <Text
    style={
      [
        {
          "color": "#081F32",
          "fontFamily": "Roboto-Bold",
          "fontSize": 34,
          "letterSpacing": 0.41,
          "lineHeight": 41,
        },
        {},
        [
          {
            "alignItems": "center",
            "flexBasis": 0,
            "flexGrow": 2,
            "flexShrink": 1,
            "marginBottom": 10,
            "textAlign": "left",
          },
        ],
      ]
    }
    textVariant="large"
    variant="large-title"
  >
    Title
  </Text>
  <View
    actionVariant="large"
    style={
      [
        {
          "alignItems": "flex-end",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginBottom": 60,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 22,
          },
        ]
      }
    >
      <RNGestureHandlerButton
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        enabled={true}
        handlerTag={3}
        handlerType="NativeViewGestureHandler"
        onActiveStateChange={[Function]}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 16,
            "display": "flex",
            "flexDirection": "row",
            "height": 22,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "marginLeft": 5,
                "marginRight": 5,
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#081F32",
                "fontFamily": "Roboto-Medium",
                "fontSize": 17,
                "letterSpacing": -0.41,
                "lineHeight": 22,
              },
              {},
              [
                {
                  "color": "#5856D6",
                },
              ],
            ]
          }
          variant="body17-semibold"
        >
          Filter
        </Text>
      </RNGestureHandlerButton>
    </View>
  </View>
</View>
`;
